src/test/deca/context/invalid/improvided/op_bin_arith_modulo.deca
{
   // Description:
   //  test de l'opération arithmétique modulo disfonctionnelle vu les types données.
   //
   // Résultats:
   //  Erreur Contextuelle
   //  Ligne 7 : The arithmetic operation modulo cannot be done due to the given types.
   int z = 2 % 3.4;
}
